1.0.9
--------------------------------

- refactor message types into received handler functions
- refactor b(chr(opcode)) to bchr(opcode)
- reorder Message ctor args, rename msgtype to msgcode
- refactor gateway.send to take message's init args instead of a message
- inline and remove Message.writeto/readfrom
- refactor collection loading to avoid the indirection over tuple


1.0.8
--------------------------------

- new ``gateway.remote_exec(func, **kwargs)`` style fo executing
  a pure function with parameters.  The function on the remote
  side also needs to accept a ``channel`` which allows it to
  communicate back and forth.  Thanks to Ronny Pfannschmidt
  for implementing it with special kudos to Maciej Fijalkowski
  for writing a "pure-function" checker so that on Python2.6
  onwards non-pure functions will be rejected.

- enhance rsyncing to also sync permissions (stat().st_mode) 
  of directories and files. 
  (should also resolve http://bitbucket.org/hpk42/py-trunk/issue/68/)

- fix rsyncing of symlinks, thanks to Charles Solar 
  (should also resolve http://bitbucket.org/hpk42/py-trunk/issue/70/)

- update internal usage of apipkg to 1.0b6

- remote_exec(module) now makes sure that the linecache is updated
  before reading and sending the source.  thanks Ronny, Matt. 

- removed all trailing whitespace from source files

1.0.7
--------------------------------

- try to avoid a random KeyboardInterrupt Error when threads
  are ending. 

- extend xspec syntax to allow for one or multiple "env:NAME=value" 
  environment variable settings which will be set on the remote side. 
  (thanks Jakub Gustak)

1.0.6
--------------------------------

- fix jython/windows interactions 
- fix waitclose/callback-with-endmarker race condition
- fix race condition where multiple threads sending data over channels
  would crash the serializer and process 

1.0.5
--------------------------------

- more care during receiver-thread finalization during interp-shutdown,