@@ -7,6 +7,7 @@
 - refactor gateway.send to take message's init args instead of a message
 - inline and remove Message.writeto/readfrom
 - refactor collection loading to avoid the indirection over tuple
+- remove the unused NamedThreadPool
 
 
 1.0.8
